--- a/css2.css
+++ b/css2.css
@@ -1,3 +1,13 @@
+* {
+    padding: 0%;
+    margin: 0px;
+}
+
+body {
+    padding: 0%;
+    margin: 0px;
+}
+
 .container-fluid {
     background-color: rgb(255, 255, 255);
 }
@@ -74,9 +84,9 @@
 
 
 #container2 {
-    display: grid;
+    /* display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
+    gap: 10px; */
     text-align: center;
     /* margin-top: 50px; */
 }
@@ -437,13 +447,13 @@
     text-align: justify;
 }
 
-.item14 p a{
+.item14 p a {
     text-decoration: none;
     color: white;
 }
 
 
-.foot-info{
+.foot-info {
     text-decoration: none;
     color: white;
 }
